day-10/affinity-hash/ingress-hash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cofre-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Declaração para utilizar hash. Nesse caso, usei hash da 'uri', mas poderia ser do cabeçalho ou outros aspectos da request.
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    
spec:
  ingressClassName: nginx
  rules:
  - host: localhost # SE FOR AWS: domínio CNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cofre-senhas
            port:
              number: 5000
